<resources>
    <string name="app_name">E-Com </string>
    <string name="welcome_to_e_com">Chào mừng đến với E-com</string>
    <string name="sign_in_to_continue">Đăng kí để tiếp tục</string>
    <string name="your_email">Email của bạn</string>
    <string name="password">Mật khẩu</string>
    <string name="invalid_email">Email không hợp lệ</string>
    <string name="password_is_not_correct">Rất tiếc! Mật khẩu không đúng</string>
    <string name="sign_in">Đăng nhập</string>
    <string name="or">Hoặc</string>
    <string name="login_with_google">Đăng nhập bằng Google</string>
    <string name="login_with_facebook">Đăng nhập bằng Facebook</string>
    <string name="forgot_password">Quên mật khẩu?</string>
    <string name="register">Đăng ký</string>
    <string name="don_t_have_a_account">Chưa có tài khoản?</string>
    <string name="full_name">Họ và tên</string>
    <string name="password_again">Nhập lại mật khẩu</string>
    <string name="have_a_account">Đã có tài khoản?</string>
    <string name="sign_up">Đăng ký</string>
    <string name="search_product">Tìm kiếm sản phẩm</string>
    <string name="category">Danh mục</string>
    <string name="more_category">Thêm danh mục</string>
    <string name="see_more">Xem thêm</string>
    <string name="flash_sale">Khuyến mãi chớp nhoáng</string>
    <string name="mega_sale">Khuyến mãi lớn</string>
    <string name="recomended_product">Sản phẩm được đề xuất</string>
    <string name="recommend_best">Chúng tôi đề xuất những sản phẩm tốt nhất cho bạn</string>
    <string name="fs_nike_air_max_270_react">FS - Nike Air Max 270 React...</string>
    <string name="_299_43">299,43 đ</string>
    <string name="_24_off">Giảm 24%</string>
    <string name="favorite_product">Sản phẩm yêu thích</string>
    <string name="select_size">Chọn kích thước</string>
    <string name="select_color">Chọn màu</string>
    <string name="specification">Thông số kỹ thuật</string>
    <string name="style">Kiểu dáng:</string>
    <string name="introduce">Giới thiệu:</string>
    <string name="review_product">Đánh giá sản phẩm</string>
    <string name="you_might_also_like">Bạn cũng có thể thích</string>
    <string name="add_to_cart">Thêm vào giỏ hàng</string>
    <string name="_5_review">5 Đánh giá</string>
    <string name="james_lawson">James Lawson</string>
    <string name="air_max_are">Giày Air Max luôn rất thoải mái, vừa vặn, sạch sẽ và hoàn hảo từ mọi góc độ. Chỉ có hộp hơi nhỏ và làm nát nhẹ giày một chút, không biết hộp luôn nhỏ như vậy hay không, nhưng dòng 90 luôn là một trong những mẫu yêu thích của tôi.</string>
    <string name="december_10_2016">10 tháng 12, 2016</string>
    <string name="write_review">Viết đánh giá</string>
    <string name="please_write">Vui lòng viết đánh giá về mức độ hài lòng tổng thể về sản phẩm!</string>
    <string name="write_your_review">Viết đánh giá của bạn</string>
    <string name="ad_velit">Ad velit voluptate laboris excepteur ex. Ea tempor veniam cillum ea cillum anim fugiat pariatur qui mollit</string>
    <string name="save">Lưu</string>
    <string name="man_fashion">Thời trang nam</string>
    <string name="woman_fashion">Thời trang nữ</string>
    <string name="exman1">Áo nam</string>
    <string name="exman2">Trang phục làm việc nam</string>
    <string name="exman3">Áo thun nam</string>
    <string name="exman4">Giày nam</string>
    <string name="exman5">Quần nam</string>
    <string name="exman6">Đồ lót nam</string>
    <string name="exwoment1">Váy</string>
    <string name="exwoment2">Áo thun nữ</string>
    <string name="exwoment3">Quần nữ</string>
    <string name="exwoment4">Chân váy</string>
    <string name="exwoment5">Túi nữ</string>
    <string name="exwoment6">Giày cao gót</string>
    <string name="exwoment7">Bikini</string>
    <string name="_145_result">145 Kết quả</string>
    <string name="product_not_found">Không tìm thấy sản phẩm</string>
    <string name="back_to_home">Trở lại Trang chủ</string>
    <string name="your_cart">Giỏ hàng của bạn</string>
    <string name="check_out">Thanh toán</string>
    <string name="items_3">Tổng sản phẩm</string>
    <string name="shipping">Giao hàng</string>
    <string name="_598_86">598,86 đ</string>
    <string name="_598_86_">598,86 đ</string>
    <string name="total_price">Tổng giá</string>
    <string name="_766_86">766,86 đ</string>
    <string name="apply">Áp dụng</string>
    <string name="enter_code">Nhập mã</string>
    <string name="import_charges">Phí nhập khẩu</string>
    <string name="edit">Chỉnh sửa</string>
    <string name="next">Tiếp theo</string>
    <string name="credit_card_or_debit">Thẻ tín dụng hoặc thẻ ghi nợ</string>
    <string name="bank_transfer">Chuyển khoản ngân hàng</string>
    <string name="paypal">PayPal</string>
    <string name="payment_on_delivery">Thanh toán khi nhận hàng</string>
    <string name="card_holder">CHỦ THẺ</string>
    <string name="success">Thành công</string>
    <string name="back_to_order">Quay lại</string>
    <string name="profile">Hồ sơ</string>
    <string name="payment">Thanh toán</string>
    <string name="address">Địa chỉ</string>
    <string name="order">Đơn hàng</string>
    <string name="gender">Giới tính</string>
    <string name="birthday">Ngày sinh</string>
    <string name="enter_new_name">Nhập tên mới</string>
    <string name="first_name">Tên</string>
    <string name="last_name">Họ</string>
    <string name="old_pass">Mật khẩu cũ</string>
    <string name="enter_new_pass">Nhập mật khẩu mới</string>
    <string name="re_enter_new_pass">Nhập lại mật khẩu mới</string>
    <string name="order_status">Trạng thái</string>
    <string name="count_item">Số lượng sản phẩm</string>
    <string name="_2_items_purchased">Đã mua 2 sản phẩm</string>
    <string name="price">Giá</string>
    <string name="order_at_e_comm_august_1_2017">Đặt hàng tại E-comm : 1 tháng 8, 2017</string>
    <string name="confirmation">Xác nhận</string>
    <string name="add_address">Thêm địa chỉ</string>
    <string name="street_address">Địa chỉ</string>
    <string name="enter_card_number">Nhập số thẻ</string>
    <string name="expiration_date">Ngày hết hạn</string>
    <string name="security_code">Mã bảo mật</string>
    <string name="enter_card_holder">Nhập chủ thẻ</string>
    <string name="enter_banking_name">Nhập tên ngân hàng</string>
    <string name="ch_n_a_ch">Chọn địa chỉ</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
