<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/white"

    tools:context=".activity.account.SignInActivity">
<LinearLayout
    android:padding="@dimen/_12sdp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_80sdp"
        android:src="@drawable/ic_sign_app" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_16sdp"
        android:fontFamily="@font/worksans_bold"
        android:text="@string/welcome_to_e_com"
        android:textColor="#223263"
        android:textSize="@dimen/_14sdp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_6sdp"
        android:text="@string/sign_in_to_continue"
        android:textColor="#9098B1"
        android:textSize="@dimen/_12sdp" />

    <LinearLayout
        android:id="@+id/llemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:background="@drawable/bg_edt_account_dis"
        android:orientation="horizontal"
        android:padding="@dimen/_6sdp">

        <ImageView
            android:id="@+id/ic_mail"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:src="@drawable/ic_round_mail" />

        <EditText
            android:id="@+id/edt_mail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:hint="@string/your_email"
            android:maxLines="1"
            android:paddingStart="@dimen/_12sdp"
            android:paddingEnd="@dimen/_12sdp"
            android:textColor="@color/black"
            android:textColorHint="#9098B1"
            android:textSize="@dimen/_13sdp" />

    </LinearLayout>

    <TextView
        android:id="@+id/txt_error_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_2sdp"
        android:layout_marginBottom="@dimen/_2sdp"
        android:fontFamily="@font/worksans_medium"
        android:text=""
        android:textColor="@color/red"
        android:textSize="@dimen/_10sdp" />

    <LinearLayout
        android:id="@+id/llpass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_edt_account_dis"
        android:orientation="horizontal"
        android:padding="@dimen/_6sdp">

        <ImageView
            android:id="@+id/ic_passs"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:src="@drawable/ic_round_lock" />

        <EditText
            android:id="@+id/edt_pass"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingStart="@dimen/_12sdp"
            android:paddingEnd="@dimen/_12sdp"
            android:textColor="@color/black"
            android:textColorHint="#9098B1"
            android:textSize="@dimen/_13sdp" />
    </LinearLayout>

    <TextView
        android:id="@+id/txt_error_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_2sdp"
        android:layout_marginBottom="@dimen/_2sdp"
        android:fontFamily="@font/worksans_medium"
        android:text=""
        android:textColor="@color/red"
        android:textSize="@dimen/_10sdp" />

    <TextView
        android:id="@+id/btn_singIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:background="@drawable/bg_btn_account_end"
        android:fontFamily="@font/worksans_semi_bold"
        android:paddingVertical="@dimen/_10sdp"
        android:text="@string/sign_in"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/_13sdp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:orientation="horizontal"
        android:weightSum="3">
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="#EBF0FF" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:fontFamily="@font/worksans_semi_bold"
            android:text="@string/or"
            android:textAlignment="center"
            android:textColor="@color/gray"
            android:textSize="@dimen/_13sdp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="#EBF0FF" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_google"
        android:paddingStart="@dimen/_6sdp"
        android:paddingEnd="@dimen/_6sdp"
        android:paddingVertical="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_edt_account_dis"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:src="@drawable/ic_google" />

        <TextView
            android:textSize="@dimen/_13sdp"
            android:textColor="#9098B1"
            android:fontFamily="@font/worksans_semi_bold"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:text="@string/login_with_google" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/btn_facebook"
        android:paddingStart="@dimen/_6sdp"
        android:paddingEnd="@dimen/_6sdp"
        android:paddingVertical="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_edt_account_dis"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:src="@drawable/ic_facebook" />

        <TextView
            android:textSize="@dimen/_13sdp"
            android:textColor="#9098B1"
            android:fontFamily="@font/worksans_semi_bold"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:text="@string/login_with_facebook" />
    </LinearLayout>

    <TextView
        android:layout_marginTop="@dimen/_12sdp"
        android:id="@+id/txt_forget_pass"
        android:textSize="@dimen/_12sdp"
        android:fontFamily="@font/worksans_semi_bold"
        android:gravity="center"
        android:text="@string/forgot_password"
        android:layout_gravity="center"
        android:textColor="@color/appcolor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView

            android:textSize="@dimen/_12sdp"
            android:fontFamily="@font/worksans_medium"
            android:gravity="center"
            android:text="@string/don_t_have_a_account"
            android:layout_gravity="center"
            android:textColor="#9098B1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginStart="@dimen/_3sdp"
            android:id="@+id/txt_signup"
            android:textSize="@dimen/_12sdp"
            android:fontFamily="@font/worksans_semi_bold"
            android:gravity="center"
            android:text="@string/register"
            android:layout_gravity="center"
            android:textColor="@color/appcolor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</LinearLayout>
</ScrollView>