<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/white"

    tools:context=".activity.SignUpActivity">

    <LinearLayout
        android:padding="@dimen/_12sdp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_80sdp"
            android:src="@drawable/ic_sign_app" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_16sdp"
            android:fontFamily="@font/worksans_bold"
            android:text="@string/welcome_to_e_com"
            android:textColor="#223263"
            android:textSize="@dimen/_14sdp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_6sdp"
            android:text="@string/sign_in_to_continue"
            android:textColor="#9098B1"
            android:textSize="@dimen/_12sdp" />

        <LinearLayout
            android:id="@+id/llUsname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:background="@drawable/bg_edt_account_dis"
            android:orientation="horizontal"
            android:padding="@dimen/_6sdp">

            <ImageView
                android:id="@+id/ic_user"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:src="@drawable/ic_round_person" />

            <EditText
                android:id="@+id/edtusname"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:hint="@string/full_name"
                android:maxLines="1"
                android:paddingStart="@dimen/_12sdp"
                android:paddingEnd="@dimen/_12sdp"
                android:textColor="@color/black"
                android:textColorHint="#9098B1"
                android:textSize="@dimen/_13sdp" />

        </LinearLayout>

        <TextView
            android:id="@+id/txt_error_fulname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_2sdp"
            android:layout_marginBottom="@dimen/_2sdp"
            android:fontFamily="@font/worksans_semi_bold"
            android:text=""
            android:textColor="@color/red"
            android:textSize="@dimen/_10sdp" />

        <LinearLayout
            android:id="@+id/llEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edt_account_dis"
            android:orientation="horizontal"
            android:padding="@dimen/_6sdp">

            <ImageView
                android:id="@+id/ic_mail"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:src="@drawable/ic_round_mail" />

            <EditText
                android:id="@+id/edtemail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:hint="@string/your_email"
                android:maxLines="1"
                android:paddingStart="@dimen/_12sdp"
                android:paddingEnd="@dimen/_12sdp"
                android:textColor="@color/black"
                android:textColorHint="#9098B1"
                android:textSize="@dimen/_13sdp" />

        </LinearLayout>

        <TextView
            android:id="@+id/txt_error_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_2sdp"
            android:layout_marginBottom="@dimen/_2sdp"
            android:fontFamily="@font/worksans_semi_bold"
            android:text=""
            android:textColor="@color/red"
            android:textSize="@dimen/_10sdp" />

        <LinearLayout
            android:id="@+id/llPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edt_account_dis"
            android:orientation="horizontal"
            android:padding="@dimen/_6sdp">

            <ImageView
                android:id="@+id/ic_passs"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:src="@drawable/ic_round_lock" />

            <EditText
                android:id="@+id/edtpass"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingStart="@dimen/_12sdp"
                android:paddingEnd="@dimen/_12sdp"
                android:textColor="@color/black"
                android:textColorHint="#9098B1"
                android:textSize="@dimen/_13sdp" />
        </LinearLayout>

        <TextView
            android:id="@+id/txt_error_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_2sdp"
            android:layout_marginBottom="@dimen/_2sdp"
            android:fontFamily="@font/worksans_semi_bold"
            android:text=""
            android:textColor="@color/red"
            android:textSize="@dimen/_10sdp" />

        <LinearLayout
            android:id="@+id/llpass2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edt_account_dis"
            android:orientation="horizontal"
            android:padding="@dimen/_6sdp">

            <ImageView
                android:id="@+id/ic_passs_again"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:src="@drawable/ic_round_lock" />

            <EditText
                android:id="@+id/edtpassagain"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:hint="@string/password_again"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingStart="@dimen/_12sdp"
                android:paddingEnd="@dimen/_12sdp"
                android:textColor="@color/black"
                android:textColorHint="#9098B1"
                android:textSize="@dimen/_13sdp" />
        </LinearLayout>

        <TextView
            android:id="@+id/txt_error_pass_again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_2sdp"
            android:layout_marginBottom="@dimen/_2sdp"
            android:fontFamily="@font/worksans_semi_bold"
            android:text=""
            android:textColor="@color/red"
            android:textSize="@dimen/_10sdp" />


        <TextView
            android:id="@+id/btn_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@drawable/bg_btn_account_end"
            android:fontFamily="@font/worksans_semi_bold"
            android:paddingVertical="@dimen/_10sdp"
            android:text="@string/sign_up"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/_13sdp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:orientation="horizontal"
            android:weightSum="3">

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="#EBF0FF" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:fontFamily="@font/worksans_semi_bold"
                android:text="@string/or"
                android:textAlignment="center"
                android:textColor="@color/gray"
                android:textSize="@dimen/_13sdp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="#EBF0FF" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_12sdp"
            android:orientation="horizontal">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/worksans_medium"
                android:gravity="center"
                android:text="@string/have_a_account"
                android:textColor="#9098B1"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:id="@+id/txt_signin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_3sdp"
                android:fontFamily="@font/worksans_semi_bold"
                android:gravity="center"
                android:text="@string/sign_in"
                android:textColor="@color/appcolor"
                android:textSize="@dimen/_12sdp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>